<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/customToolbarColor"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/etickets"
            app:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_etickets"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/textColor"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp" />

        <ImageView
            android:id="@+id/welcomeImage"
            android:layout_width="wrap_content"
            android:layout_height="456dp"
            android:layout_marginBottom="0dp"
            android:src="@drawable/etickets_image" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonBackgroundColor"
            android:textColor="@color/buttonTextColor"
            android:text="@string/log_in"
            android:layout_marginBottom="10dp"
            android:padding="12dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonBackgroundColor"
            android:textColor="@color/buttonTextColor"
            android:text="@string/register"
            android:padding="12dp" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>